--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -12,22 +12,5 @@ micronaut:
 pagination:
   default-count: 10
 
-#mongodb:
-#  uri: ${MONGODB_URI}
-
-datasources:
-  default:
-    dialect: H2
-    url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: admin
-    password: password
-    driverClassName: org.h2.Driver
-
-jpa:
-  default:
-    properties:
-      hibernate:
-        hbm2ddl:
-          auto: create
-          charset_name: UTF-8
-        show_sql: true
+mongodb:
+  uri: ${MONGODB_URI}
