--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -54,4 +54,4 @@ endpoints:
     sensitive: false
 
 mongodb:
-  uri: ${MONGODB_URI}
+  uri: ${MONGODB_URI:mongodb://${username:}:${password:}@${DATABASE_URL:localhost:27017}/appointments?ssl=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false}
