--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -53,5 +53,4 @@ endpoints:
     enabled: true
     sensitive: false
 
-mongodb:
-  uri: ${MONGODB_URI:mongodb://${username:}:${password:}@${DATABASE_URL:localhost:27017}/appointments?ssl=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false}
+# MongoDB configuration handled by MongoClientFactory
