--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -53,4 +53,5 @@ endpoints:
     enabled: true
     sensitive: false
 
-# MongoDB configuration handled by MongoClientFactory
+mongodb:
+  uri: ${MONGODB_URI:mongodb://localhost:27017/appointments}
