--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -54,4 +54,4 @@ endpoints:
     sensitive: false
 
 mongodb:
-  uri: ${MONGODB_URI:mongodb://localhost:27017/appointments}
+  uri: mongodb://${DB_USERNAME}:${DB_PASSWORD}@${DATABASE_URL}/appointments?ssl=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false
