--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -53,5 +53,4 @@ endpoints:
     enabled: true
     sensitive: false
 
-mongodb:
-  uri: mongodb://${DB_USERNAME}:${DB_PASSWORD}@${DATABASE_URL}/appointments?ssl=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false
+# MongoDB configuration handled by MongoDbConfiguration class
