--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -53,4 +53,5 @@ endpoints:
     enabled: true
     sensitive: false
 
-# MongoDB configuration handled by MongoDbConfiguration class
+mongodb:
+  uri: ${mongodb.uri}
