--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -53,4 +53,5 @@ endpoints:
     enabled: true
     sensitive: false
 
-# MongoDB configuration will be provided by custom configuration class
+mongodb:
+  uri: mongodb://${ENCODED_DB_USERNAME}:${ENCODED_DB_PASSWORD}@${DATABASE_URL}/appointments?ssl=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false
