--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -54,4 +54,4 @@ endpoints:
     sensitive: false
 
 mongodb:
-  uri: mongodb://#{encodedDbUsername}:#{encodedDbPassword}@${DATABASE_URL}/appointments?ssl=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false
+  uri: mongodb://#{encodedDbUsername}:#{encodedDbPassword}@${DATABASE_URL}/appointments?ssl=false&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false
